# src/api/urls.py
@@ -9,7 +9,9 @@ urlpatterns = [
     path('auth', user.VKUserAuthView.as_view(), name='auth'),
 
     path('tests', main.test_list_view, name='tests-list'),
-    path('tests/my', main.MyTestsView.as_view(), name='tests-my'),
     path('tests/<int:pk>', main.test_detail_view, name='tests-detail'),
     path('tests/<int:pk>/pass', main.TestPassView.as_view(), name='tests-pass'),
+
+    path('tests/my', main.my_tests_list_view, name='tests-my-list'),
+    path('tests/my/<int:pk>', main.my_tests_detail_view, name='tests-my-detail'),
 ]
